# eventbus-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/bus-core/: Cargo.toml
crates/bus-core/src/: error.rs  event.rs  handler.rs  id.rs  idempotency.rs  lib.rs  publisher.rs
crates/bus-core/tests/: error_test.rs  id_test.rs
crates/bus-macros/: Cargo.toml
crates/bus-macros/src/: event.rs  lib.rs
crates/bus-macros/tests/: compile_fail_tests.rs  derive_test.rs
crates/bus-macros/tests/compile_fail/: missing_id.rs  missing_id.stderr  missing_interpolation_field.rs  missing_interpolation_field.stderr  missing_subject.rs  missing_subject.stderr  wrong_id_type.rs  wrong_id_type.stderr
crates/bus-nats/: Cargo.toml
crates/bus-nats/src/: ack.rs  advisory.rs  circuit_breaker.rs  client.rs  consumer.rs  dlq.rs  lib.rs  publisher.rs  stream.rs  subscriber.rs  testing.rs
crates/bus-nats/src/inbox/: mod.rs  nats_kv.rs  redis.rs
crates/bus-nats/tests/: circuit_breaker_test.rs  dlq_test.rs  inbox_kv_test.rs  publisher_test.rs  subscriber_shutdown_test.rs  subscriber_test.rs
crates/bus-outbox/: Cargo.toml  README.md
crates/bus-outbox/migrations/: 001_outbox.sql  002_inbox.sql  003_sagas.sql
crates/bus-outbox/src/: dispatcher.rs  inbox_pg.rs  lib.rs  migrate.rs  postgres.rs  sqlite.rs  store.rs
crates/bus-outbox/tests/: inbox_pg_test.rs  outbox_test.rs  sqlite_test.rs
crates/bus-telemetry/: Cargo.toml
crates/bus-telemetry/src/: lib.rs  metrics.rs  propagation.rs  spans.rs
crates/bus-telemetry/tests/: propagation_test.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: builder.rs  bus.rs  lib.rs  prelude.rs
crates/event-bus/src/saga/: choreography.rs  mod.rs  orchestration.rs
crates/event-bus/tests/: builder_test.rs  saga_test.rs
docs/: compass_artifact.md  compass_artifact_wf-fb92b6d7-427b-4f40-aabf-cb38d3bd8676_text_markdown.md
docs/diagrams/: component-diagram.md  plan-1-diagrams.md  system-diagrams.md
docs/superpowers/plans/: 2026-04-28-plan-1-bus-core-and-macros.md  2026-04-28-plan-2-bus-nats-and-outbox.md  2026-04-28-plan-3-telemetry-and-facade.md  2026-05-01-dlq-pattern-b-v1.md  2026-05-01-dlq-subscriber-hardening.md
docs/superpowers/specs/: 2026-04-28-eventbus-rs-architecture-design.md
examples/01-basic-publish/: Cargo.toml
examples/01-basic-publish/src/: main.rs
examples/02-outbox-postgres/: Cargo.toml
examples/02-outbox-postgres/src/: main.rs
examples/03-idempotent-handler/: Cargo.toml
examples/03-idempotent-handler/src/: main.rs
