[workspace]
members = [
    "crates/bus-core",
    "crates/bus-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Olivier Taylor <tech@mey.network>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1hoodlabs/eventbus-rs"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
