[package]
name = "bus-macros"
description = "Derive macros for eventbus-rs"
keywords = ["nats", "eventbus", "macros", "derive"]
categories = ["asynchronous", "network-programming"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
bus-core = { path = "../bus-core" }
serde = { workspace = true, features = ["derive"] }
trybuild = { version = "1", features = ["diff"] }
uuid = { workspace = true }
